Eevee. Reflections with reflection plane broken (regression) #77672

Closed
opened 2020-06-09 11:07:21 +02:00 by Vyacheslav Kobozev · 13 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GT 640/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-07 22:16, hash: 281319653e
Worked: 2.83 release and b18c2a3c413b^ (caused by b18c2a3c41)

Short description of error
untitled.blend2

Here the comparison.
2020-06-09_12-04-11.mp4

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GT 640/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-07 22:16, hash: `281319653e` Worked: 2.83 release and b18c2a3c413b^ (caused by b18c2a3c41) **Short description of error** [untitled.blend2](https://archive.blender.org/developer/F8603611/untitled.blend2) Here the comparison. [2020-06-09_12-04-11.mp4](https://archive.blender.org/developer/F8603526/2020-06-09_12-04-11.mp4)

Added subscriber: @Vyach

Added subscriber: @Vyach

#77012 was marked as duplicate of this issue

#77012 was marked as duplicate of this issue

#77619 was marked as duplicate of this issue

#77619 was marked as duplicate of this issue
Vyacheslav Kobozev changed title from Eevee. Reflections with reflection plane broken to Eevee. Reflections with reflection plane broken (regression) 2020-06-09 11:07:39 +02:00
[untitled.blend2](https://archive.blender.org/developer/F8603611/untitled.blend2)

blender-2.90.0-b74cc23dc478-windows64 — broken
blender-2.90.0-fcccee0c3372-windows64 — working

blender-2.90.0-b74cc23dc478-windows64 — broken blender-2.90.0-fcccee0c3372-windows64 — working
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Member

Caused by b18c2a3c41

CC @fclem

Caused by b18c2a3c41 CC @fclem

Added subscriber: @SpectreFirst

Added subscriber: @SpectreFirst

Added subscriber: @nacioss

Added subscriber: @nacioss

Added subscribers: @NAD4, @mano-wii

Added subscribers: @NAD4, @mano-wii

This issue was referenced by 9b3dfbe651

This issue was referenced by 9b3dfbe6513106c71faa50d09fbe27a071b3194f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-24 13:50:41 +02:00
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:27:15 +01:00
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#77672
No description provided.