Fix T77672 EEVEE: Reflections with reflection plane broken (regression)